[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Summary.gd" type="Script" id=2]
[ext_resource path="res://Textures/Placeholders_old/Black_holder.png" type="Texture" id=3]
[ext_resource path="res://Fonts/BigFont1.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/Welcomer.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=6]
[ext_resource path="res://Textures/GUI/panel new 1.png" type="Texture" id=7]
[ext_resource path="res://Textures/buggy.png" type="Texture" id=8]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Textures/Placeholders_new/worm_warn.png" type="Texture" id=10]
[ext_resource path="res://Textures/Placeholders_new/landmine_new2.png" type="Texture" id=11]
[ext_resource path="res://Textures/Placeholders_new/boulder_big_new.png" type="Texture" id=12]
[ext_resource path="res://Textures/Placeholders_old/Base_small.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=14]
[ext_resource path="res://Textures/Placeholders_old/Base.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Base.gd" type="Script" id=16]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Paths.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scripts/Spawners.gd" type="Script" id=19]
[ext_resource path="res://Scenes/Spawners/RRock_Spawner.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/Spawners/Hole_Spawner.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/Spawners/Rock_Spawner.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scenes/Spawners/Mine_Spawner.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/Spawners/Checkpoint_Spawner.tscn" type="PackedScene" id=24]
[ext_resource path="res://Scenes/Spawners/Alien_Spawner.tscn" type="PackedScene" id=25]
[ext_resource path="res://Sounds/Lunar_Joyride.ogg" type="AudioStream" id=26]
[ext_resource path="res://Scenes/BonusPoints.tscn" type="PackedScene" id=27]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Digital Play St.ttf"

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 14
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 14
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 14
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 64
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 24
outline_size = 2
outline_color = Color( 0.984314, 0.0392157, 0.0392157, 1 )
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=12]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("ObstacleMine:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 0.5, 1, 0.5, 1, 0.5 ),
"update": 1,
"values": [ false, true, true, true, true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DangerLbl:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, true, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Checkpoint:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ShortDistanceBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ObstacleMine:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DangerLbl:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("ObstacleRound:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 0.5, 0.5, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, true, true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DangerLbl:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, true, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Checkpoint:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ShortDistanceBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ObstacleRound:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DangerLbl:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("ObstacleWorm:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, true, true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DangerLbl:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, true, true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Checkpoint:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ShortDistanceBar:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ObstacleWorm:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DangerLbl:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 721.756 ]
}

[node name="Summary" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 2

[node name="V" type="Node2D" parent="Summary"]
editor/display_folded = true
visible = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Summary/V"]
position = Vector2( 1005.77, 544.75 )
scale = Vector2( 1.75807, 3.21601 )
texture = ExtResource( 3 )

[node name="LevelReached" type="RichTextLabel" parent="Summary/V"]
margin_left = 641.0
margin_top = 313.0
margin_right = 1224.0
margin_bottom = 362.0
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = "Time to reach point \"U \""

[node name="Label_YourTIME" type="RichTextLabel" parent="Summary/V"]
margin_left = 567.0
margin_top = 416.0
margin_right = 813.0
margin_bottom = 465.0
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = "Your Time "

[node name="Label_AverageTime" type="RichTextLabel" parent="Summary/V"]
margin_left = 561.0
margin_top = 476.0
margin_right = 893.0
margin_bottom = 525.0
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = "Average Time"

[node name="Label_TopRecord" type="RichTextLabel" parent="Summary/V"]
margin_left = 557.104
margin_top = 538.337
margin_right = 889.104
margin_bottom = 587.337
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = "Top Record"

[node name="Label_GoddBonusPoint" type="RichTextLabel" parent="Summary/V"]
margin_left = 622.0
margin_top = 652.0
margin_right = 1591.0
margin_bottom = 701.0
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = "Good Bonus Point :"

[node name="Label_ BrokenRecord" type="RichTextLabel" parent="Summary/V"]
margin_left = 566.0
margin_top = 709.0
margin_right = 1467.0
margin_bottom = 848.0
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = "You have broken the record"

[node name="YourTime" type="RichTextLabel" parent="Summary/V"]
margin_left = 1038.84
margin_top = 412.347
margin_right = 1798.84
margin_bottom = 461.347
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = ":   0000"

[node name="AverageTime" type="RichTextLabel" parent="Summary/V"]
margin_left = 1042.27
margin_top = 469.791
margin_right = 1802.27
margin_bottom = 518.791
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = ":   0000"

[node name="TopRecord" type="RichTextLabel" parent="Summary/V"]
margin_left = 1043.99
margin_top = 528.95
margin_right = 1803.99
margin_bottom = 577.95
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = ":   0000"

[node name="BonusPoint" type="RichTextLabel" parent="Summary/V"]
margin_left = 1037.13
margin_top = 651.556
margin_right = 1797.13
margin_bottom = 700.556
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
text = ":   0000"

[node name="UI" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 442, 203 )
z_index = 56

[node name="Time" type="RichTextLabel" parent="UI"]
margin_left = 25.4343
margin_top = 67.6824
margin_right = 461.435
margin_bottom = 114.682
custom_fonts/normal_font = ExtResource( 4 )
text = "Time : "

[node name="Road" type="RichTextLabel" parent="UI"]
margin_left = 284.434
margin_top = 68.6824
margin_right = 720.435
margin_bottom = 115.682
custom_fonts/normal_font = ExtResource( 4 )
text = "Time : "

[node name="GodMode" type="RichTextLabel" parent="UI"]
margin_left = 285.434
margin_top = 32.6824
margin_right = 721.435
margin_bottom = 79.682
custom_fonts/normal_font = ExtResource( 4 )
text = "Time : "

[node name="MainTimeCounter" type="RichTextLabel" parent="UI"]
margin_left = 25.0003
margin_top = 17.9992
margin_right = 949.0
margin_bottom = 71.9992
custom_fonts/normal_font = ExtResource( 4 )
text = "Time : "

[node name="SpawnLog" type="RichTextLabel" parent="UI"]
margin_left = 22.0
margin_top = 231.0
margin_right = 575.0
margin_bottom = 1130.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Spawn log:"

[node name="Score" type="RichTextLabel" parent="UI"]
margin_left = 25.9999
margin_top = 124.0
margin_right = 712.0
margin_bottom = 172.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Score :"

[node name="HighScore" type="RichTextLabel" parent="UI"]
margin_left = 25.9999
margin_top = 171.0
margin_right = 712.0
margin_bottom = 219.0
custom_fonts/normal_font = ExtResource( 4 )
text = "Score :"

[node name="GUI" type="CanvasLayer" parent="."]
layer = 3

[node name="Welcomer" type="RichTextLabel" parent="GUI"]
margin_left = 469.0
margin_top = 555.0
margin_right = 2110.0
margin_bottom = 666.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.784314, 0.313726, 0.313726, 1 )
text = "Beginner course Go !"
script = ExtResource( 5 )

[node name="Control" type="Control" parent="GUI" groups=[
"Control",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -11.5241
margin_top = 5.01053
margin_right = -11.5242
margin_bottom = 5.01038
script = ExtResource( 6 )

[node name="Distance" type="Control" parent="GUI/Control"]
margin_left = 1111.1
margin_top = -19.6429
margin_right = 1151.1
margin_bottom = 20.3571

[node name="Distance_T" type="TextureRect" parent="GUI/Control/Distance"]
margin_right = 241.0
margin_bottom = 149.0
rect_scale = Vector2( 1.4, 1.2 )
texture = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="GUI/Control/Distance"]
anchor_left = 0.34
anchor_top = 0.206
anchor_right = 0.473
anchor_bottom = 0.421
margin_left = 69.5377
margin_top = 4.07754
margin_right = 128.218
margin_bottom = 59.4775
texture = ExtResource( 8 )

[node name="XLabel" type="Label" parent="GUI/Control/Distance"]
anchor_left = 0.503
anchor_top = 0.303
anchor_right = 0.553
anchor_bottom = 0.437
margin_left = 149.693
margin_top = 41.9741
margin_right = 159.693
margin_bottom = 56.6141
custom_fonts/font = SubResource( 3 )
text = "X"

[node name="LifeLabel" type="Label" parent="GUI/Control/Distance"]
anchor_left = 0.581
anchor_top = 0.288
anchor_right = 0.697
anchor_bottom = 0.422
margin_left = 176.903
margin_top = 28.367
margin_right = 183.263
margin_bottom = 43.007
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 4 )
text = "3"

[node name="DistanceLabel" type="Label" parent="GUI/Control/Distance"]
anchor_left = 0.212
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.625
margin_left = 65.6476
margin_top = 60.6325
margin_right = 123.128
margin_bottom = 73.6325
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 5 )
text = "Distance:"

[node name="DistanceBar" type="ProgressBar" parent="GUI/Control/Distance"]
anchor_left = 0.207
anchor_top = 0.632
anchor_right = 0.805
anchor_bottom = 0.766
margin_left = 59.7693
margin_top = 83.8186
margin_right = 238.849
margin_bottom = 102.459
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="TextureProgress" type="TextureProgress" parent="GUI/Control/Distance"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ScoreBoard" type="Control" parent="GUI/Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ScoreBoard_T" type="TextureRect" parent="GUI/Control/ScoreBoard"]
margin_left = 476.0
margin_top = -17.0
margin_right = 717.0
margin_bottom = 132.0
rect_scale = Vector2( 1.4, 1.2 )
texture = ExtResource( 7 )

[node name="ScoreLabels" type="Label" parent="GUI/Control/ScoreBoard"]
anchor_left = 0.147
anchor_top = 0.263
anchor_right = 0.5
anchor_bottom = 0.86
margin_left = 519.791
margin_top = 19.5202
margin_right = 581.671
margin_bottom = 76.6402
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 6 )
text = "HI SCORE:
SCORE:
TIME:
"

[node name="HiScoreResult" type="Label" parent="GUI/Control/ScoreBoard"]
anchor_left = 0.537
anchor_top = 0.253
anchor_right = 0.881
anchor_bottom = 0.387
margin_left = 635.693
margin_top = 18.1033
margin_right = 635.789
margin_bottom = 30.7434
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 7 )
text = "0"
valign = 1
autowrap = true
uppercase = true

[node name="ScoreResult" type="Label" parent="GUI/Control/ScoreBoard"]
anchor_left = 0.534
anchor_top = 0.396
anchor_right = 0.883
anchor_bottom = 0.53
margin_left = 634.961
margin_top = 37.9806
margin_right = 634.852
margin_bottom = 50.6206
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 8 )
text = "0"
valign = 1
uppercase = true

[node name="GTime" type="Label" parent="GUI/Control/ScoreBoard"]
anchor_left = 0.535
anchor_top = 0.54
anchor_right = 0.888
anchor_bottom = 0.675
margin_left = 635.18
margin_top = 58.0353
margin_right = 635.107
margin_bottom = 70.6353
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="Warnings" type="Control" parent="GUI/Control"]
margin_left = 763.272
margin_top = -23.3038
margin_right = 803.272
margin_bottom = 16.6962

[node name="Warnings_T" type="TextureRect" parent="GUI/Control/Warnings"]
anchor_left = 0.398
anchor_right = 0.611
anchor_bottom = 0.212
margin_left = -15.92
margin_right = 216.56
margin_bottom = 140.52
rect_scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 7 )

[node name="Checkpoint" type="Label" parent="GUI/Control/Warnings"]
anchor_left = 0.307
anchor_top = 0.143
anchor_right = 0.66
anchor_bottom = 0.666
margin_left = 133.714
margin_top = 27.4997
margin_right = 170.594
margin_bottom = 84.5797
rect_scale = Vector2( 1.8, 1.8 )
custom_fonts/font = SubResource( 10 )
text = "A"
align = 1
valign = 1

[node name="ShortDistanceBar" type="ProgressBar" parent="GUI/Control/Warnings"]
anchor_left = 0.149
anchor_top = 0.644
anchor_right = 0.842
anchor_bottom = 0.752
margin_left = 57.04
margin_top = 137.24
margin_right = 305.32
margin_bottom = 163.92

[node name="ObstacleWorm" type="TextureRect" parent="GUI/Control/Warnings"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 79.6632
margin_top = 40.2645
margin_right = 264.664
margin_bottom = 168.264
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 10 )
stretch_mode = 4

[node name="ObstacleMine" type="TextureRect" parent="GUI/Control/Warnings"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 45.9
margin_top = 103.7
margin_right = 226.9
margin_bottom = 167.7
texture = ExtResource( 11 )
stretch_mode = 4

[node name="ObstacleRound" type="TextureRect" parent="GUI/Control/Warnings"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 93.9518
margin_top = 56.2074
margin_right = 263.952
margin_bottom = 211.207
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 12 )
stretch_mode = 4

[node name="DangerLbl" type="Label" parent="GUI/Control/Warnings"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 45.9
margin_top = 45.9
margin_right = 226.9
margin_bottom = 75.9
custom_fonts/font = SubResource( 11 )
text = "DANGER!!!"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/Control/Warnings"]
anims/mine = SubResource( 12 )
anims/round = SubResource( 13 )
anims/worm = SubResource( 14 )

[node name="WarnBase" type="Sprite" parent="GUI/Control/Warnings"]
visible = false
position = Vector2( 229.544, 125.804 )
scale = Vector2( 0.299668, 0.322893 )
texture = ExtResource( 13 )
flip_h = true

[node name="Black_Holder_Left" type="Sprite" parent="GUI"]
position = Vector2( 222.929, 545.587 )
scale = Vector2( 0.700018, 3.23606 )
z_index = 20
texture = ExtResource( 3 )

[node name="Black_Holder_Right" type="Sprite" parent="GUI"]
position = Vector2( 1697.15, 537.368 )
scale = Vector2( 0.700018, 3.23606 )
z_index = 2
texture = ExtResource( 3 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 14 )]

[node name="Base" type="Sprite" parent="."]
position = Vector2( 776.347, 801.249 )
texture = ExtResource( 15 )
flip_h = true
script = ExtResource( 16 )

[node name="Player" parent="." instance=ExtResource( 17 )]
position = Vector2( 935.418, 910.642 )
Gravity = 200.0
MaxJump = 20.0
Friction = 0.0
MaxMoveSpeed = 120.0
move_borders = Vector2( 650, 800 )

[node name="Paths" parent="." instance=ExtResource( 18 )]

[node name="Spawners" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 19 )

[node name="Rock_Spawner2" parent="Spawners" instance=ExtResource( 20 )]
position = Vector2( 1917.19, 493.938 )

[node name="Hole_Spawner" parent="Spawners" instance=ExtResource( 21 )]
position = Vector2( 1671, 943 )
scale = Vector2( 0.949715, 1.15578 )

[node name="Rock_Spawner" parent="Spawners" instance=ExtResource( 22 )]
position = Vector2( 1580.37, 911.777 )

[node name="Mine_Spawner" parent="Spawners" instance=ExtResource( 23 )]
position = Vector2( 1591.34, 932.86 )

[node name="Checkpoint_Spawner" parent="Spawners" instance=ExtResource( 24 )]
position = Vector2( 1583.69, 1000.1 )

[node name="Alien_SpawnerD" parent="Spawners" instance=ExtResource( 25 )]
position = Vector2( 1885.29, 356.368 )

[node name="Alien_SpawnerC" parent="Spawners" instance=ExtResource( 25 )]
visible = false
position = Vector2( 1510.72, 93.8405 )

[node name="Alien_SpawnerB" parent="Spawners" instance=ExtResource( 25 )]
visible = false
position = Vector2( 977.297, 85.8518 )

[node name="Alien_SpawnerE" parent="Spawners" instance=ExtResource( 25 )]
visible = false
position = Vector2( 485.033, 82.1506 )

[node name="Alien_SpawnerA" parent="Spawners" instance=ExtResource( 25 )]
position = Vector2( 294.981, 377.636 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
autoplay = true

[node name="BonusPoints" parent="." instance=ExtResource( 27 )]
position = Vector2( -6.86987, -115.7 )
[connection signal="visibility_changed" from="Summary/V" to="." method="_on_V_visibility_changed"]
[connection signal="visibility_changed" from="GUI/Welcomer" to="GUI/Welcomer" method="_on_Welcomer_visibility_changed"]
